--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
 <head>
     <link href="style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap" rel="stylesheet">
     <title>The Tea Cozy</title>
 </head>
 <body>
@@ -14,11 +11,71 @@
        </div>
        <div id="nav">
             <ul>
-                <li>Mission</li>
-                <li>Featured Tea</li>
-                <li>Locations</li>
+                <li><a href="#locations">Locations</a></li>
+                <li><a href="#container-month">Featured Tea</a></li>
+                <li><a href="mission">Mission</a></li>
             </ul>
         </div>
-   </header> 
+   </header>
+   <main>
+       <section class="container">
+            <div id="mission">
+            <a id="mission"><h2>Our Mission</h2></a>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade Organic Tea</h4>
+            </div>    
+        </section>
+       <section class="container-month">
+        <a id="container-month"><h2>Tea of the Month</h2></a>   
+           <h4>What's Steeping at The Tea Cozy</h4>
+       </section>
+       <section class="offerings">
+        <figure id="pic-1"><img src="images/img-berryblitz.jpeg" alt="Berry Blitz Tea">
+            <figcaption>Fall Berry Blitz Tea</figcaption>
+        </figure>
+        <figure id="pic-2"><img src="images/img-spiced-rum.jpeg" alt="Spiced Rum Tea">
+            <figcaption>Spiced Rum Tea</figcaption>
+        </figure>
+        <figure id="pic-3"><img src="images/img-donut.jpeg" alt="Seasonal Donuts">
+            <figcaption>Seasonal Donuts</figcaption>
+        </figure>
+        <figure id="pic-4"><img src="images/img-myrtle-ave.jpeg" alt="Myrtle Ave Tea">
+            <figcaption>Myrtle Ave Tea</figcaption>
+        </figure>
+        <figure id="pic-5"><img src="images/img-bedford-bizarre.jpeg" alt="Bedford Bizarre Tea">
+            <figcaption>Bedform Bizarre Tea</figcaption>
+        </figure>
+       </section>
+       <section class="locations">
+           <div id="heading"><a id="locations"><h2>Locations</a></h2></div>
+           <div id="addresses">
+               <div class="address">
+                <h3>Downtown</h3>
+                <h4>384 West 4th Street</h4>
+                <h4>Suite 108</h4>
+                <h4>Portland, Maine</h4>
+                </div>
+                <div class="address">
+                    <h3>East Bayside</h3>
+                    <h4>3433 Phisherman's Avenue</h4>
+                    <h4>(Northwest Corner)</h4>
+                    <h4>Portland, Maine</h4>
+                </div>
+                <div class="address">
+                    <h3>Oakdale</h3>
+                    <h4>515 Crescent Avenue</h4>
+                    <h4>Second Floor</h4>
+                    <h4>Portland, Maine</h4>
+                </div>
+             </div>
+       </section>
+       <section class="contact">
+           <h2>The Tea Cozy</h2>
+           <h5>contact@theteacozy.com</h5>
+           <h5>917-555-8904</h5>
+       </section>
+   </main>
+   <footer>
+       <h5>copyright The Tea Cozy 2017</h5>
+   </footer> 
 </body>
 </html>
